Backport python bindings CMake changes

--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -26,8 +26,8 @@
 
 
 ############### SWIG PYTHON BINDINGS ################
-FIND_PACKAGE(SWIG 3.0 REQUIRED)
-INCLUDE(${SWIG_USE_FILE})
+find_package(SWIG 3.0 REQUIRED)
+include(${SWIG_USE_FILE})
 
 ### Enable some legacy SWIG behaviors, in newer CMAKEs
 if (POLICY CMP0078)
@@ -37,20 +37,30 @@ if (POLICY CMP0086)
 	cmake_policy(SET CMP0086 OLD)
 endif()
 
-FIND_PACKAGE(PythonInterp 3)
-FIND_PACKAGE(PythonLibs 3)
-if (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
+find_package(PythonInterp 3)
+find_package(PythonLibs 3)
+
+if (NOT PYTHONLIBS_FOUND OR NOT PYTHONINTERP_FOUND)
+  return()
+endif()
 
 	### Include Python header files
-	INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
-	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${PYTHON_INCLUDE_PATH})
 
-	### Enable C++ support in SWIG
+if (CMAKE_VERSION VERSION_LESS 3.12)
+  ### Include project headers
+  include_directories(
+    "${PROJECT_SOURCE_DIR}/include"
+    "${PROJECT_BINARY_DIR}/include")
+endif()
+
+### Enable C++ in SWIG
 	set_property(SOURCE openshot.i PROPERTY CPLUSPLUS ON)
 	set_property(SOURCE openshot.i PROPERTY SWIG_MODULE_NAME openshot)
 
 	### Suppress a ton of warnings in the generated SWIG C++ code
-	set(SWIG_CXX_FLAGS "-Wno-unused-variable -Wno-unused-function -Wno-deprecated-copy -Wno-class-memaccess -Wno-cast-function-type \
+set(SWIG_CXX_FLAGS "-Wno-unused-variable -Wno-unused-function \
+  -Wno-deprecated-copy -Wno-class-memaccess -Wno-cast-function-type \
 -Wno-unused-parameter -Wno-catch-value -Wno-sign-compare -Wno-ignored-qualifiers")
 	separate_arguments(sw_flags UNIX_COMMAND ${SWIG_CXX_FLAGS})
 	set_property(SOURCE openshot.i PROPERTY GENERATED_COMPILE_OPTIONS ${sw_flags})
@@ -58,8 +68,9 @@ if (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
   ### Take include dirs from target, automatically if possible
   if (CMAKE_VERSION VERSION_GREATER 3.13)
     set_property(SOURCE openshot.i PROPERTY USE_TARGET_INCLUDE_DIRECTORIES True)
-  else ()
-    set_property(SOURCE openshot.i PROPERTY INCLUDE_DIRECTORIES $<TARGET_PROPERTY:openshot,INCLUDE_DIRECTORIES>)
+elseif (CMAKE_VERSION VERSION_GREATER 3.12)
+  set_property(SOURCE openshot.i PROPERTY
+    INCLUDE_DIRECTORIES $<TARGET_PROPERTY:openshot,INCLUDE_DIRECTORIES>)
   endif ()
 
 	### Add the SWIG interface file (which defines all the SWIG methods)
@@ -74,33 +85,41 @@ if (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
 	                      PREFIX "_" OUTPUT_NAME "openshot")
 
 	### Link the new python wrapper library with libopenshot
-	target_link_libraries(${SWIG_MODULE_pyopenshot_REAL_NAME}
-                        PUBLIC ${PYTHON_LIBRARIES} openshot)
+target_link_libraries(${SWIG_MODULE_pyopenshot_REAL_NAME} PUBLIC
+  ${PYTHON_LIBRARIES} openshot)
 
-	### Check if the following Debian-friendly python module path exists
-	SET(PYTHON_MODULE_PATH "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/dist-packages")
-	if (NOT EXISTS ${PYTHON_MODULE_PATH})
+######### INSTALL PATH ########
+if (NOT DEFINED PYTHON_MODULE_PATH AND DEFINED $ENV{PYTHON_MODULE_PATH})
+  set(PYTHON_MODULE_PATH $ENV{PYTHON_MODULE_PATH})
+endif()
 
-		### Calculate the python module path (using distutils)
-		execute_process ( COMMAND ${PYTHON_EXECUTABLE} -c "\
+if (NOT DEFINED PYTHON_MODULE_PATH)
+  if (WIN32 OR APPLE)
+    set (PYTHON_MODULE_PATH "python")
+  endif()
+
+  if (UNIX AND NOT APPLE)
+    ### Check if the following Debian-friendly python module path exists
+    set(PYTHON_MODULE_PATH
+      "lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/dist-packages")
+
+    if (NOT EXISTS "${CMAKE_INSTALL_PREFIX}/${PYTHON_MODULE_PATH}")
+      ### Calculate the python module path (using distutils)
+      execute_process ( COMMAND ${PYTHON_EXECUTABLE} -c "\
 from distutils.sysconfig import get_python_lib; \
-print( get_python_lib( plat_specific=True, prefix='${CMAKE_INSTALL_PREFIX}' ) )"
-			OUTPUT_VARIABLE _ABS_PYTHON_MODULE_PATH
-			OUTPUT_STRIP_TRAILING_WHITESPACE )
+print( get_python_lib( plat_specific=True, prefix='' ) )"
+        OUTPUT_VARIABLE PYTHON_MODULE_PATH
+        OUTPUT_STRIP_TRAILING_WHITESPACE )
+    endif()
+  endif()
+endif()
 
-		GET_FILENAME_COMPONENT(_ABS_PYTHON_MODULE_PATH
-				"${_ABS_PYTHON_MODULE_PATH}" ABSOLUTE)
-		FILE(RELATIVE_PATH _REL_PYTHON_MODULE_PATH
-				${CMAKE_INSTALL_PREFIX} ${_ABS_PYTHON_MODULE_PATH})
-		SET(PYTHON_MODULE_PATH ${_ABS_PYTHON_MODULE_PATH})
-	endif()
-	message("PYTHON_MODULE_PATH: ${PYTHON_MODULE_PATH}")
+message(STATUS "PYTHON_MODULE_PATH: ${CMAKE_INSTALL_PREFIX}/${PYTHON_MODULE_PATH}")
 
 	############### INSTALL HEADERS & LIBRARY ################
 	### Install Python bindings
-	INSTALL(TARGETS ${SWIG_MODULE_pyopenshot_REAL_NAME}
-	        LIBRARY DESTINATION ${PYTHON_MODULE_PATH} )
-	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/openshot.py
+install(TARGETS ${SWIG_MODULE_pyopenshot_REAL_NAME}
 	        DESTINATION ${PYTHON_MODULE_PATH} )
 
-endif ()
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/openshot.py
+  DESTINATION ${PYTHON_MODULE_PATH} )
